ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: ingress-nginx 

spec:
  ingressClassName: nginx
  rules:
  - host: doc-shanu.com
    http: 
      paths:
        - path: /user
          pathType: Prefix
          backend:
            service:
              name: my-service
              port:
                number: 80
